Red pen edits to end of chapter 3.

--- a/04_vtw/vtw.tex
+++ b/04_vtw/vtw.tex
@@ -55,7 +55,7 @@ The shading of each point within the cube represents its degree of virtuality, c
 %=========================================================================================================
 
 \subsection{Existing Virtual Heritage Applications}
-
+\label{existing-virtual-heritage-applications}
 In terms of alternate reality techniques, real time augmented reality simulations (category 13 of figure \ref{taxonomy_2.png}) have been used to add artefacts, actors and reconstructed architecture to views of present day sites that are still accessible and may bear traces of their original status, whilst real time virtual reality simulations (category 10) have been used to host more complete reconstructions of entire buildings and settlements for interaction via screen, HMD and CAVE, including where the present day site bears no evidence of its past status or is inaccessible due to latter development, change in landscape, etc.
 
 %=========================================================================================================
@@ -113,6 +113,9 @@ In addition to these temporary workshops, the reconstructions have also been use
 %=========================================================================================================
 
 \subsection{Parallel Reality in Virtual Heritage}
+
+\label{parallel-reality-in-virtual-heritage}
+
 Applications of alternate reality techniques within virtual heritage have thus far broadly fallen either into the category of augmented reality experienced at the site, or virtual reality experienced away from the site (in terms of space, time, or both). The dissemination of the OVW group's reconstructions has been no exception to this observation, falling into categories 10-12 of figure \ref{taxonomy_2.png}, using complete virtual environments that are experienced with both spatial and temporal separation from the real sites that they represent.
 
 Applying the concept of parallel reality to virtual heritage represents an opportunity to explore exciting new modalities of interaction that combine the complete virtual environments of categories 10-12 with the real time juxtaposition between real and virtual environments of augmented reality systems from category 13. In terms of the four categories of the taxonomic space, parallel reality combines the high precision and interactivity of a virtual reality system (category 10) with two values of viruality, as the user is provided the ability to alternatively view the complete virtual environment (virtuality = 1) or the unmodified real environment (virtuality = 0). The automatism of such a system occupies a position between that of virtual reality and augmented reality; whilst the system will require a more involved development cycle than a purely virtual reality one, the relaxed requirements upon registrational accuracy of a parallel reality system compared to an augmented reality system promise higher automatism than a purely augmented reality system.
@@ -122,7 +125,7 @@ Applying the concept of parallel reality to virtual heritage represents an oppor
 Although parallel reality as a concept is less critical of accurate registration than augmented reality, the accuracy of registration available represents a restriction upon the style of interaction possible with a parallel reality system. Considering an increasing level of accuracy, three use cases for parallel reality within cultural heritage scenarios can be pictured;
 
 \begin{enumerate}
-	\item Static viewpoints - Where the accuracy of the positioning system used by a parallel reality system is low, a style of interaction in which users move between predetermined points of interest at which they gain the ability to view the virtual environment from the equivalent vantage point is possible. In this scenario, users are free to explore any vantages within the real environment, but are restricted to viewing the virtual environment from particular vantages chosen by curators for their particular importance. The minimum distance between any two of these viewpoints is dictated by the worse case accuracy of the positioning solution used by the parallel reality system.
+	\item Static viewpoints - Where the accuracy of the positioning system used by a parallel reality system is low, a style of interaction in which users move between predetermined points of interest at which they gain the ability to view the virtual environment from the equivalent vantage point is possible. In this scenario, users are free to explore any vantages within the real environment, but are restricted to viewing the virtual environment from particular vantages chosen by curators for their particular importance, similar to the static AR experiences mentioned in section \ref{existing-virtual-heritage-applications}. The minimum distance between any two of these viewpoints is dictated by the worse case accuracy of the positioning solution used by the parallel reality system.
 	
 	\item Freeform exploration - Where the accuracy of the positioning system is high enough to reliably differentiate a user's position between adjacent rooms/corridors, placing them on the correct side of walls and estimating their position within open areas, a style of interaction wherein the user has the ability to view the virtual environment from the equivalent vantage point wherever they may be in the site is possible. In this scenario, users are free to explore and compare any vantages within both real and virtual environments, although direct comparison of small features/artefacts may not be possible due to inaccuracy in the positioning solution.
 	
@@ -276,7 +279,7 @@ Further requirements for obtaining accurate compass bearings from a MEMS magneto
 As mentioned in section \ref{SecondLifeMobility} the Second Life client can be controlled only via mouse, keyboard and joystick. Using the HMC6343's compass bearing and yaw values therefore requires one of two approaches;
 
 \begin{enumerate}
-	\item Encapsulating the compass bearing and yaw values into mouse, keyboard \&/or joystick commands;
+	\item Encapsulating the compass bearing and yaw values into mouse, keyboard and/or joystick commands;
 	\item Modification to the Second Life client to allow the compass bearing and yaw values to be used directly at a lower level of abstraction.
 \end{enumerate}
 
@@ -288,7 +291,7 @@ With its stock firmware, the Arduino's ATMega16U2 presents itself to the host co
 
 %***How to flash the firmware
 
-In this manner, the Arduino can marshal the values obtained from the HMC6343 into standard USB HID joystick commands, allowing the Second Life client's stock joystick interface (see figure \ref{arduino_joystick_for_second_life_3.jpg}) to be used to control the camera orientation (\& avatar movement) according to the physical orientation of the HMC6343. A simple example of this can be seen in a video available to view online\ArduinoJoystickVideoFootnote{}.
+In this manner, the Arduino can marshal the values obtained from the HMC6343 into standard USB HID joystick commands, allowing the Second Life client's stock joystick interface (see figure \ref{arduino_joystick_for_second_life_3.jpg}) to be used to control the camera orientation (and avatar movement) according to the physical orientation of the HMC6343. A simple example of this can be seen in a video available to view online\ArduinoJoystickVideoFootnote{}.
 
 \begin{figure}[h]
 \centering
@@ -500,7 +503,7 @@ success = 0;
 \label{arduinoMAX6hex}
 \end{figure}
 
-These hex arrays can be generated by hand from the UBX protocol specification\maxProtocolFootnote{}, or the MAX-6 can be configured by connecting it directly to a host computer (such as by using an Arduino as a Universal Asynchronous Receiver/Transmitter (UART) by connecting the MAX-6 to digital pins 0 and 1), configuring the MAX-6 using the u-blox u-center software and then copying the resultant config as hex messages from the relevant console window.
+These hex arrays can be generated by hand from the UBX protocol specification\maxProtocolFootnote{}, or the MAX-6 can be configured by connecting it directly to a host computer (such as by using an Arduino as a Universal Asynchronous Receiver/Transmitter (UART) by connecting the MAX-6 to digital pins 0 and 1), configuring the MAX-6 using the u-blox u-center\footnote{\url{https://u-blox.com/en/evaluation-tools-a-software/u-center/u-center.html}} software and then copying the resultant config as hex messages from the relevant console window.
 
 NMEA messages from the MAX-6 are processed on the Arduino using the TinyGPS library\tinygpsFootnote{}, extracting the latitude and longitude values before combining them with magnetic compass bearing (yaw) and pitch values from the HMC6343 and sending these to the host computer via the Arduino's USB connectivity.
 
@@ -797,7 +800,7 @@ The OVW Group's reconstruction of St Andrews cathedral, as shown in figures \ref
 
 For the purposes of testing VTW at the cathedral, a temporary server and network setup was effected using a Lenovo ThinkPad X61s\thinkpadFootnote{} laptop computer to host the OpenSim server with a Linksys WRT54G\wrtFootnote{} wireless router powered from a 12V sealed lead-acid battery to provide wireless communication between the OpenSim server and the WindPad over a much larger range than the laptop's internal wireless interface could provide. This setup is shown in use at the cathedral by figure \ref{pangolin_laptop_router_battery.jpg}, the architecture of this experimental implementation is shown by figure \ref{vtw_implementation.png} and figure \ref{vtw_in_use.jpg} shows VTW in use at the cathedral.
 
-\TwoFig{pangolin_laptop_router_battery.jpg} {OpenSim Server and wireless AP used throughout VTW experiments.} {pangolin_laptop_router_battery.jpg}
+\TwoFig{pangolin_laptop_router_battery.jpg} {OpenSim Server and wireless AP used for VTW experiments.} {pangolin_laptop_router_battery.jpg}
        {vtw_in_use.jpg} {VTW platform in use at St Andrews cathedral.} {vtw_in_use.jpg}
 
 \begin{figure}[h]
@@ -813,8 +816,6 @@ For the purposes of testing VTW at the cathedral, a temporary server and network
 
 \newcommand{\ubloxcepFootnote}{\footnote{\url{https://u-blox.com/images/downloads/Product_Docs/MAX-6_ProductSummary_(GPS.G6-HW-10089).pdf}}}
 
-\newcommand{\ucenterFootnote}{\footnote{\url{https://u-blox.com/en/evaluation-tools-a-software/u-center/u-center.html}}}
-
 \newcommand{\htconesFootnote}{\footnote{\url{http://www.htc.com/uk/smartphones/htc-one-s/}}}
 
 \newcommand{\snapdragonFootnote}{\footnote{\url{https://www.qualcomm.com/products/snapdragon/processors/s4-s1}}}
@@ -825,48 +826,50 @@ For the purposes of testing VTW at the cathedral, a temporary server and network
 
 %=====================
 
-The product summary for the MAX-6 claims accuracy of 2.5m Circular Error Probable (CEP) without SBAS corrections and 2m CEP with SBAS corrections \textit{``demonstrated with a good active antenna''}\ubloxcepFootnote{}. This means that, in an ideal situation with SBAS correction data available, there would be 50\% certainty that each position reported by the GPS receiver would be within 2m of its actual position. The SL-1202 antenna used is passive, however as the distance between antenna and the MAX-6 IC itself in the hardware application is only a few millimeters there would have been negligible benefit from using an active antenna. However whether the SL-1202 constitutes `good' for achieving the headlining performance characteristics of the MAX-6 is debatable as the definition of `good' was not provided in the product summary.
+The product summary for the MAX-6 claims accuracy of 2.5m Circular Error Probable (CEP) without SBAS corrections and 2m CEP with SBAS corrections \textit{``demonstrated with a good active antenna''}\ubloxcepFootnote{}. This means that in an ideal situation with SBAS correction data available there is 50\% certainty that each position reported by the GPS receiver will be within 2m of its actual position. The SL-1202 antenna used by VTW is passive, however as the distance between antenna and the MAX-6 IC itself in the hardware application is only a few millimeters there would be negligible benefit from using an active antenna. Whether the SL-1202 constitutes `good' for achieving the headlining performance characteristics of the MAX-6 is debatable as the definition of `good' is not provided in the product summary.
 
-To determine the real world accuracy attainable with the MAX-6 outfitted with the SL-1202 in situations akin to those of the cultural heritage case study, a walking route around the St Andrews cathedral ruins, akin to the route that an individual visitor or school group might take, was planned and then walked with the MAX-6 connected to a laptop computer via an Arduino operating as a UART feeding the raw NMEA messages into the u-center\ucenterFootnote{} GPS evaluation software version 7.0 which logged the messages for later evaluation. Simultaneously for comparative purposes a mid-range consumer Android smartphone was used to record the same track; a HTC One S\htconesFootnote{} containing a gpsOne Gen 8A solution within its Qualcomm Snapdragon S4 processor\snapdragonFootnote{} and using Google's My Tracks\mytracksFootnote{} app version 2.0.3 to record the data.
+To determine the real world accuracy attainable with the MAX-6 outfitted with the SL-1202 in the scenario of the cathedral as a cultural heritage site and thus which of the three scenarios outlined in section \ref{parallel-reality-in-virtual-heritage} the VTW platform can support, a route around the St Andrews cathedral ruins akin to the route that a visitor might take was walked with the MAX-6 connected to a laptop computer via an Arduino operating as a UART feeding the raw NMEA messages into the u-center software version 7.0 which logged the messages for later evaluation. Simultaneously for comparative purposes a mid-range consumer Android smartphone of the era was used to record the same track; a HTC One S\htconesFootnote{} containing a gpsOne Gen 8A solution within its Qualcomm Snapdragon S4 processor\snapdragonFootnote{} and using Google's My Tracks\mytracksFootnote{} app version 2.0.3 to record the data.
 
 The three sets of positional data (planned route, MAX-6 recorded route and smartphone recorded route) were entered into a PostgreSQL database and the PostGIS database extender's \texttt{ST\_HausdorffDistance} algorithm\hausdorffFootnote{} was used to calculate the Hausdorff distances between the recorded routes and the planned route and between the recorded routes themselves. In this scenario, the Hausdorff distance represents the furthest distance needed to travel from any point on the route recorded by the GPS receiver to reach the nearest point on the planned route. Because of the substantially greater inaccuracies identified in the latter part of the recorded tracks, separate Hausdorff distances were calculated both for the complete tracks and also for truncated first and second sub-tracks.
 
 %This ability to control navigation within the 3D virtual environment without explicit conscious input of keyboard/mouse/touch commands is integral to reducing the cognitive load required to maintain a presence within a virtual environment which is a key requirement for overcoming the vacancy problem and achieving successful mobile cross reality.
 
-During the experiments the MAX-6 was unable to maintain reception of the additional correction data required for SBAS operation; when left stationary for several minutes reception was possible however subsequent movement of only a few meters at walking pace broke the connection. This reduced the theoretical maximum performance of the unit to 2.5m CEP, with observed performance being lower. Figure \ref{vtw_all_routes.png} depicts an aerial view of the St Andrews cathedral ruins, oriented with North upwards; the blue line represents the planned route, red the route recorded by the MAX-6 receiver and green the route recorded by the smartphone for comparative purposes, both while walking the planned route.
+During the experiments the MAX-6 was unable to maintain reception of the additional correction data required for SBAS operation; when left stationary for several minutes reception was possible however subsequent movement of only a few meters at walking pace would reliably break the connection. This reduced the theoretical maximum performance of the unit to 2.5m CEP, with observed performance being lower.
+
+Figure \ref{vtw_all_routes.png} depicts an aerial view of the St Andrews cathedral ruins, oriented with North upwards; the blue line represents the planned route, red the route recorded by the MAX-6 receiver and green the route recorded by the smartphone while walking the planned route.
 
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.8\textwidth]{vtw_all_routes.png}
-\caption{Planned and recorded paths for VTW scenario at St Andrews cathedral (complete).}
+\caption{Planned and recorded paths at St Andrews cathedral (complete track).}
 \label{vtw_all_routes.png}
 \end{figure}
 
 The Hausdorff distance between the planned route and that recorded by the MAX-6 was $1.02e^{-04\circ}$. The `length' of a degree of latitude and a degree of longitude depends upon location upon the Earth; around the location of the St Andrews cathedral 1$^\circ$ of latitude is equivalent to 111347.95m and 1$^\circ$ of longitude to 61843.88m. Thus the Hausdorff distance of $1.02e^{-04\circ}$ can be visualized as $\pm11.3$m of North/South inaccuracy or $\pm6.3$m of East/West inaccuracy (or a combination of both N/S and E/W inaccuracy not exceeding a total displacement of $1.02e^{-04\circ}$ from the planned route).
 
-The MAX-6 did achieve better performance than the smartphone, which recorded a Hausdorff distance of $1.33e^{-04\circ}$ ($\pm14.8$m N/S, $\pm8.2$m E/W). The Hausdorff distance between the routes logged by the MAX-6 and the smartphone was $1.14e^{-04\circ}$ ($\pm12.7$m N/S, $\pm7.0$m E/W), which represents a low correlation between the inaccuracies recorded by the two receivers even though they are of similar magnitudes from the planned route.
+The MAX-6 achieved better performance than the smartphone, which recorded a Hausdorff distance of $1.33e^{-04\circ}$ ($\pm14.8$m N/S, $\pm8.2$m E/W). The Hausdorff distance between the routes logged by the MAX-6 and the smartphone was $1.14e^{-04\circ}$ ($\pm12.7$m N/S, $\pm7.0$m E/W) which represents a low correlation between the inaccuracies recorded by the two receivers even though they are of similar magnitudes from the planned route.
 
-The maximum inaccuracies were recorded when walking along the South wall of the cathedral's nave. This wall is one of the most complete sections of the building with stonework reaching some 30ft above ground level (as can be seen in figure \ref{cathedral_real_outside.jpg}) and providing an effective obstruction to line-of-sight to half of the sky (and substantially impairing reception of signals from GPS satellites) when in close proximity to it. When considering just the sub-route shown in figure \ref{vtw_alll_routes_first_half.png}, which terminates before this wall begins to significantly obstruct view of the sky, the Hausdorff distances are notably smaller; the MAX-6 achieved a Hausdorff distance of $7.23e^{-05\circ}$ ($\pm8.05$m N/S, $\pm4.47$m E/W) throughout this sub-route, with the smartphone still behind with $8.99e^{-05\circ}$ ($\pm10.01$m N/S, $\pm5.56$m E/W). Again the Hausforff distance between the receivers showed low correlation between the inaccuracies, at $6.43e^{-05\circ}$ ($\pm7.12$m N/S, $\pm3.98$m E/W).
+The maximum inaccuracies were recorded when walking along the South wall of the cathedral's nave. This wall is one of the most complete sections of the building with stonework reaching some 30ft above ground level (as can be seen in figure \ref{cathedral_real_outside.jpg}) and providing an effective obstruction to line-of-sight to half of the sky (and thus substantially impairing reception of signals from GPS satellites) when in proximity to it. When considering just the sub-route shown in figure \ref{vtw_alll_routes_first_half.png}, which terminates before this wall begins to significantly obstruct view of the sky, the Hausdorff distances are notably smaller; the MAX-6 achieved a Hausdorff distance of $7.23e^{-05\circ}$ ($\pm8.05$m N/S, $\pm4.47$m E/W) throughout this sub-route, with the smartphone still behind with $8.99e^{-05\circ}$ ($\pm10.01$m N/S, $\pm5.56$m E/W). Again the Hausforff distance between the receivers showed low correlation between the inaccuracies, at $6.43e^{-05\circ}$ ($\pm7.12$m N/S, $\pm3.98$m E/W).
  
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.8\textwidth]{vtw_alll_routes_first_half.png}
-\caption{Planned and recorded paths for VTW scenario at St Andrews cathedral (first sub path).}
+\caption{Planned and recorded paths at St Andrews cathedral (first sub track).}
 \label{vtw_alll_routes_first_half.png}
 \end{figure}
 
-When analyzing the tracks in the vicinity of the nave (see figure \ref{vtw_all_routes_second_half.png}) it is shown that although the MAX-6 outperformed the smartphone in terms of Hausdorff distance this relationship can be considered misleading as the smartphone track corresponded more closely in shape to the planned route even if it did stray further at its extreme. The discrepancy in the behavior of the two receivers in this situation is attributed to different implementations of dead-reckoning functionality between the receivers. Dead-reckoning is the process used when a GPS receiver loses reception of location data from satellites and extrapolates its position based upon a combination of the last received position data and the velocity of travel at the time of receiving these data.
+When analyzing the tracks in the vicinity of the nave (see figure \ref{vtw_all_routes_second_half.png}) it is shown that although the MAX-6 outperformed the smartphone in terms of Hausdorff distance this relationship can be considered misleading as the smartphone track corresponded more closely in shape to the planned route even if it did stray further from it at its extreme. The discrepancy in the behavior of the two receivers in this situation is attributed to different implementations of dead-reckoning functionality between the receivers. Dead-reckoning is the process used when a GPS receiver loses reception of location data from satellites and extrapolates its position based upon a combination of the last received position data and the velocity of travel at the time of receiving these data.
  
 \begin{figure}[h]
 \centering
 \includegraphics[width=0.8\textwidth]{vtw_all_routes_second_half.png}
-\caption{Planned and recorded paths for VTW scenario at St Andrews cathedral (second sub path).}
+\caption{Planned and recorded paths at St Andrews cathedral (second sub track).}
 \label{vtw_all_routes_second_half.png}
 \end{figure}
 
-VTW's camera control from orientation data does not have as stringent performance criteria as the movement control from position data. Unlike augmented reality applications where sparse virtual content is superimposed upon a view of a real environment and the virtual objects must be placed accurately in order for the effect to work well, parallel reality presents a complete virtual environment that is viewed `separately' or side-by-side with the real environment and thus discrepancies between orientation of real and virtual environments have a less detrimental effect to the experience. Although the accuracy of the camera control during the experiments was reported as being sufficient, the speed at which the camera orientation moved to match physical orientation was reported as being too slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings are combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates. Frame rates within VTW whilst navigating the route averaged between 15 and 20 frames per second with the Second Life client's `quality and speed' slider set to the `low' position.
+VTW's camera control from orientation data does not have as stringent performance criteria as its movement control. Unlike augmented reality applications where sparse virtual content is superimposed upon a view of a real environment and the virtual objects must be placed accurately in order for the effect to work well, parallel reality presents a complete virtual environment that in the case of VTW is viewed alternately side-by-side with the real environment and thus discrepancies between orientation of real and virtual environments has a less detrimental effect. The accuracy of the camera control during the experiments was reported as being sufficient, however the speed at which the camera orientation moved to match physical orientation was reported as being too slow, resulting in having to wait for the display to `catch up' to changes in orientation. This is attributed to the 10Hz sampling rate of the orientation sensors which, particularly after readings are combined for smoothing purposes to reduce jerky movement, resulted in too infrequent orientation updates. Frame rates within VTW whilst navigating the route averaged between 15 and 20 frames per second with the Second Life client's `quality and speed' slider set to the `low' position.
 
-The style of explorative interaction with virtual content that this system employs is more resilient to input lag and low frame rates than other scenarios of interaction with virtual content such as fast paced competitive video games including First Person Shooters (FPS) [20], but overall user experience would nonetheless be improved by a faster sampling of orientation data and a higher frame rate. Additionally it should be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and has not been optimized for use on less powerful mobile platforms such as VTW. Performance of VTW on a less graphically complex OpenSim region that also depicts a reconstruction of a cultural heritage site, was better at 20 to 25 frames per second at the `low' position and between 15 and 20 frames per second at `high'.
+The style of explorative interaction with virtual content that this system employs is more resilient to input lag and low frame rates than other scenarios of interaction with virtual content such as fast paced competitive video games including First Person Shooters (FPS) [20], but overall user experience would nonetheless be improved by a faster sampling of orientation data and a higher frame rate. Additionally it should be noted that the cathedral reconstruction was created with relatively powerful desktop computers in mind as the primary deployment platform and has not been optimized for use on less powerful mobile platforms such as VTW. Performance of VTW on a less graphically complex OpenSim region that also depicts a reconstruction of a cultural heritage site was better at 20 to 25 frames per second at the `low' position and between 15 and 20 frames per second at `high'.
 
 %\begin{figure}[h]
 %\centering
@@ -879,16 +882,20 @@ The style of explorative interaction with virtual content that this system emplo
 
 \subsection{Performance Implications}
 
-The positional accuracy of $1.02e^{-04\circ}$ attained by the MAX-6 is not sufficient for the mobile parallel reality style of interaction that VTW envisaged. This value, analogous to a combination of $\pm11.3$m of North/South inaccuracy or $\pm6.3$m of East/West inaccuracy, represents a constraint on the granularity of the content; it is the minimum distance required between any two points of interest for them to be correctly differentiated between. This value is too large to differentiate between, for example, two sides of a wall, which can lead to unfortunate situations wherein a user's virtual presence is placed on the opposite side of a real wall, ruining the effect of being able to switch between real and virtual stimuli. After experiencing VTW with, at times, theoretically as low as 2m CEP, an accuracy of around 1m CEP (analogous to $8.98e^{-06\circ}$ latitude or $1.62e^{-05\circ}$ longitude around the location of the St Andrews cathedral) is envisaged as the minimum for successful implementation of the VTW concept.
+When considering the Hausdorff distance of $1.02e^{-04\circ}$ in relation to the three scenarios outlined in section \ref{parallel-reality-in-virtual-heritage} it is important to remember that this figure represents the worst case scenario and is not necessarily a good indication of average performance. This value, analogous to $\pm11.3$m of North/South inaccuracy or $\pm6.3$m of East/West inaccuracy, represents a constraint on the granularity of the content; it is the minimum distance required between any two points to guarantee that they are correctly differentiated between, however it does not mean that two points separated by less than this distance will never be correctly differentiated between.
 
-A theoretical solution to this issue of accuracy with GPS is to alter the style of interaction, such that instead of the user's virtual presence following in the footsteps of their real self, it would move between particular pre determined points of interest (which are separated by a distance above the granularity imposed by the inaccuracy of the GPS data). While this would allow for users to walk through the real cathedral and switch to viewing the virtual cathedral from the equivalent vantage point, they would only be able to do so at specific locations, which is not ideal and does not differentiate this style of interaction substantially from previous XR projects in which stationary computer workstations could be used to see into the virtual environment.
+Considering the first scenario of static viewpoints, this level of positional accuracy is plenty sufficient and the value of $1.02e^{-04\circ}$ can be used in the selection process to ensure that viewpoints are spaced sufficiently that there is no chance for incorrect identification of the current viewpoint.
 
-The accuracy of orientation tracking does not change with different positional accuracy and the accuracy attained in the experiments was sufficient for an acceptable user experience, however the experience would benefit greatly from better graphical quality and higher responsiveness to changes in user orientation. The immersiveness of a hand held tablet is also rather poor, which does not fit well with one of the major proposed benefits of the parallel reality concept - the ability to produce immersive, atmospheric virtual visuals (especially when compared to paradigms such as augmented reality which have established hand held implementations).
+Considering the second scenario of freeform exploration, this level of positional accuracy is not ideal but was still sufficient to explore certain areas of the cathedral site in this unrestricted fashion. Whilst accuracy of this level is not sufficient to reliably differentiate between two adjacent rooms or to allow a user to `walk through' a virtual doorway, when considering a large site such as the cathedral at which visitors are often viewing the site from some distance due to its sheer size, this level of accuracy is sufficient for freeform exploration. For example, when walking on the central grass area enclosed by the cloisters (the large square area seen toward the bottom left of figures \ref{vtw_all_routes.png} through \ref{vtw_all_routes_second_half.png}) and using VTW to look North/East toward the virtual cathedral proper, the positional discrepancy was largely imperceptible - when looking at the cathedral building from 50m away, a discrepancy of 10m does not post much of a problem. It is only when approaching features more closely that the discrepancy between real and virtual becomes apparent.
+
+Considering the third scenario with detailed comparison of objects and artefacts in close proximity is where the positional discrepancy renders the experience unworkable. When walking from the cloisters through the real South wall into the cathedral nave, the virtual vantage would pass through the virtual South wall several feet on either side of the virtual doorway. Comparison between an object the size of a doorway from a distance of a few feet in the manner that scenario 3 envisages would be unworkable with the positional accuracy of VTW.
+
+The accuracy of orientation tracking does not change with different positional accuracy and the accuracy attained in the experiments was sufficient for an acceptable user experience, however the experience would benefit greatly from better graphical quality and higher responsiveness to changes in user orientation.
 
 %=========================================================================================================
 
 \section{Summary}
 
-This chapter has introduced virtual heritage as a field in which the successful application of alternate reality techniques has a proven history and to which the application of parallel reality promises to be of further benefit. The Virtual Time Window project was introduced as an initial foray into the realm of applying parallel reality to virtual heritage, making use of an x86 tablet computer imbued with position and orientation sensing via GPS and combined accelerometer/magnetometer, for parallel reality exploration of outdoor cultural heritage sites and their virtual reconstructions hosted upon an OpenSim framework. An implementation of this platform is presented, however real world experimentation revealed that the accuracy of positional tracking obtainable, even by discrete GPS receivers that outperform those mainstream receivers found in smartphones, is not sufficient for the envisaged style of interaction. Furthermore, the ability of a complete virtual environment presented on a small hand held display to provide a greater sense of immersion in a complete, atmospheric virtual environment was found to be lacking.
+This chapter has introduced virtual heritage as a field in which the application of alternate reality techniques has a demonstrated history of success and to which the application of parallel reality promises to be of further benefit. The Virtual Time Window project was an initial foray into the application of parallel reality to virtual heritage, making use of an x86 tablet computer imbued with position and orientation sensing via GPS and accelerometer/magnetometer, for tandem exploration of outdoor cultural heritage sites and their virtual reconstructions hosted upon an OpenSim framework. Real world experimentation revealed that the accuracy of positional tracking obtainable by the discrete GPS receiver of the VTW platform was sufficient both for a scenario in which the user observes the virtual environment at static viewpoints and for a freeform exploration scenario wherein a certain distance is maintainted between the user and the objects being observed. 
 
 %=========================================================================================================
